setDynamicToolbarMaxHeight causes incorrect viewport clipping on PennyArcade
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: sblatz, Assigned: hiro)
References
()
Details
Attachments
(2 files)
From Fenix issue: https://github.com/mozilla-mobile/fenix/issues/10780.
Christian did some investigation on this ticket and it looks like when we setDynamicToolbarMaxHeight to any non-zero value, the viewport for this site breaks.
Any ideas what's going on here?
Comment 1•11 months ago
|
||
I think we need a Hiro :)
Assignee | ||
Comment 2•11 months ago
•
|
||
This is somewhat related to WebRender (it's hard to believe though). Initially I don't see any difference on the rendering between Fenix and Chrome. But I happened to realize that I did disable WebRender on my Pixel3.
(Keep NI to me)
Assignee | ||
Comment 3•11 months ago
|
||
CCing Timothy.
Assignee | ||
Updated•11 months ago
|
Assignee | ||
Updated•11 months ago
|
Assignee | ||
Comment 4•11 months ago
|
||
Probably this is another variant of bug 1619169. (I need to build Fenix)
Assignee | ||
Comment 5•11 months ago
|
||
Looks like nsPresContext::mSizeForViewportUnits is something wrong.
Assignee | ||
Comment 6•11 months ago
|
||
The site is a case that window.innerHeight is affected by the minimum scale size.
Assignee | ||
Comment 7•11 months ago
|
||
Assignee | ||
Comment 8•11 months ago
|
||
The viewport units size doesn't match the aspect ratio of the screen size in
some cases.
For example, in the case of the reftest in this commit, the meta viewport is
"width=1600, height=device-height" and the screen size during reftest is
"800x1000". Thus the viewport units size will be "1600x1000". In such cases
with the old way ExnapdHeightForViewportUnits shrinks the given size
"1600x1800" to "1600x1000" with 100px dynamic toolbar max height (and the
MOZ_ASSERT in the function happens on debug builds).
Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bc9732b590eb Expand the given size in ExpandHeightForViewportUnits by multiplying the 'vh value / visible area height'. r=botond
Comment 10•11 months ago
|
||
bugherder |
Description
•